test/fail/replace_null09.v3
//@execute 0=0; 1=0; 2=44; 3=58
type X {
	case A;
	case B(x: int) { def m() -> int { return x; } }
}
def array = Array<X.B>.new(4);
def d: X.B;
def y = (array[2] = d, array[2] = X.B(44));

def main(a: int) -> int {
	if (a == 3) array[a] = X.B(55 + a);
	return array[a].m();
}
